<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context="com.example.yuzelli.SmartTour.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/v_center"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp">

        <ImageView
            android:id="@+id/img_appIcon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:scaleType="fitXY"
            android:contentDescription="@string/img_description"
            android:src="@mipmap/ic_app" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_appIcon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </RelativeLayout>

    <View
        android:id="@+id/v_center"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_centerInParent="true" />


    <View
        android:id="@+id/v_line1"
        android:layout_width="250dp"
        android:layout_height="0.5dp"
        android:layout_above="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@color/ivory" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_register"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_login_button"
        android:text="@string/login"
        android:textColor="@color/ivory"
        android:textSize="18sp" />


    <ImageView
        android:id="@+id/img_lock"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_above="@+id/v_line1"
        android:layout_alignStart="@+id/v_line1"
        android:layout_marginBottom="10dp"
        android:background="@null"
        android:contentDescription="@string/img_description"
        android:textCursorDrawable="@color/ivory"
        android:src="@mipmap/icon_lock_48px" />

    <EditText
        android:id="@+id/et_passWord"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignEnd="@+id/v_line1"
        android:layout_alignTop="@+id/img_lock"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/img_lock"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:paddingStart="10dp"
        android:textColor="@color/ivory"
        android:background="@null"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textColorHint="@color/ivory"
        android:textSize="12sp" />

    <View
        android:id="@+id/v_line2"
        android:layout_width="250dp"
        android:layout_height="0.5dp"
        android:layout_above="@+id/img_lock"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@color/ivory" />

    <ImageView
        android:id="@+id/img_persion"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_above="@+id/v_line2"
        android:layout_alignStart="@+id/v_line2"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/img_description"
        android:src="@mipmap/icon_person_48px" />

    <EditText
        android:id="@+id/et_userPhone"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignEnd="@+id/v_line2"
        android:layout_alignTop="@+id/img_persion"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/img_persion"
        android:hint="@string/phone"
        android:paddingStart="10dp"
        android:inputType="phone"
        android:textColor="@color/ivory"
        android:textColorHint="@color/ivory"
        android:background="@null"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="12sp" />

    <View
        android:id="@+id/v_line3"
        android:layout_width="250dp"
        android:layout_height="0.5dp"
        android:layout_above="@+id/img_persion"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@color/ivory" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/register_user"
        android:textColor="@color/white"
        android:textSize="16sp" />
</RelativeLayout>
